<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/person_logo"
            android:title="@string/my_account" />

<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/setting"-->
<!--            android:title="@string/settings" />-->

    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_baseline_send"
                android:title="@string/send" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />




</menu>
