<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/user_profile"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="119dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="243dp"
            android:layout_marginBottom="31dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="146dp"
            tools:srcCompat="@drawable/person" />

        <TextView
            android:id="@+id/person_email"
            android:layout_width="221dp"
            android:layout_height="22dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="8dp"
            android:text="@string/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="146dp" />

        <TextView
            android:id="@+id/person_name"
            android:layout_width="220dp"
            android:layout_height="20dp"
            android:layout_alignTop="@+id/person_email"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="76dp"
            android:text="@string/person_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/person_phoneNo"
            android:layout_width="219dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="43dp"
            android:text="@string/phone_no"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/verify_email"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/person_phoneNo"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="14dp"
            android:text="@string/verify_your_email"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/verify_email_now"
            android:layout_width="97dp"
            android:layout_height="20dp"
            android:layout_alignStart="@+id/person_phoneNo"
            android:layout_alignBottom="@+id/person_phoneNo"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="105dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="-30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/verify_now"
            android:textColor="#0000FF"
            android:textSize="11sp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="357dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:textAlignment="center"
        android:text="@string/mainactivity"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/name"
        android:layout_width="362dp"
        android:layout_height="57dp"
        android:layout_marginTop="332dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="@+id/name">

    </ListView>

    <Button
        android:id="@+id/add1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/idTVRetrieveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/retrieve_data"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.025" />

    <ListView
        android:id="@+id/idLVCourses"
        android:layout_width="359dp"
        android:layout_height="263dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>