<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/signup_removebg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="359dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_up"
        android:textSize="30sp" />



    <ImageView
        android:id="@+id/email_logo"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="312dp"
        app:srcCompat="@drawable/at_the_rate" />

    <EditText
        android:id="@+id/person_email"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/email_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <ImageView
        android:id="@+id/person_logo"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="259dp"
        app:srcCompat="@drawable/person" />

    <EditText
        android:id="@+id/person_name"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/person_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="250dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/phoneNo_logo"
        android:layout_width="25dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="205dp"
        app:srcCompat="@drawable/phone" />

    <EditText
        android:id="@+id/person_phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/person_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="196dp"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="phone" />

    <ImageView
        android:id="@+id/pass_logo"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="157dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/lock2" />

    <EditText
        android:id="@+id/person_pass"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/person_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="149dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="123dp"
        android:text="@string/sign_condition"
        android:textAlignment="center"
        android:textSize="11sp" />

    <Button
        android:id="@+id/signup_to_otp"
        android:layout_width="314dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@id/terms"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:background="#0000FF"
        android:text="@string/sign_in"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="102dp"
        android:layout_marginBottom="43dp"
        android:text="@string/login_before"
        android:textSize="11sp" />

    <Button
        android:id="@+id/signup_to_login"
        android:layout_width="49dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="189dp"
        android:layout_marginBottom="38dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/login"
        android:textColor="#0000FF"
        android:textSize="11sp" />

</RelativeLayout>