<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#fcfcfc"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/back_to_login"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/left_arrow"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/forgot_passimg"
        android:layout_width="305dp"
        android:layout_height="265dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        app:srcCompat="@drawable/forgot_pass"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="265dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="294dp"
        android:text="@string/forgot"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="236dp"
        android:text="@string/forgot_dsc" />

    <ImageView
        android:id="@+id/email_logo"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="181dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/at_the_rate" />

    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/email_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="171dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/forgot_to_reset"
        android:layout_width="314dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:background="#0000FF"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

</RelativeLayout>