<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/login_removebg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="323dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/email_logo"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="275dp"
        app:srcCompat="@drawable/at_the_rate"
        android:contentDescription="@string/todo"/>

    <EditText
        android:id="@+id/person_email"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/email_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="263dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <ImageView
        android:id="@+id/pass_logo"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="228dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/lock2" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/login_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="217dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_to_forgot"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="224dp"
        android:layout_marginBottom="192dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/forgot"
        android:textColor="#0000FF"
        android:textSize="11sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/login_submit"
        android:layout_width="314dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@id/login_to_forgot"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="147dp"
        android:background="#0000FF"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

<!--    <TextView-->
<!--        android:id="@+id/textView6"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginStart="122dp"-->
<!--        android:layout_marginBottom="118dp"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/or"-->
<!--        android:textSize="15sp" />-->

<!--    <Button-->
<!--        android:id="@+id/login_google"-->
<!--        android:layout_width="314dp"-->
<!--        android:layout_height="36dp"-->
<!--        android:layout_alignBottom="@id/login_to_forgot"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginBottom="74dp"-->
<!--        android:background="@color/white"-->
<!--        android:text="@string/google"-->
<!--        android:textColor="@color/black" />-->

    <Button
        android:id="@+id/login_to_signup"
        android:layout_width="70dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="182dp"
        android:layout_marginBottom="102dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/Register"
        android:textColor="@color/purple_700"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="94dp"
        android:layout_marginBottom="103dp"
        android:text="@string/signup_before"
        android:textSize="11sp" />


</RelativeLayout>