<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/reset_pass_removebg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="347dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/reset_pass"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="231dp"
        android:ems="10"
        android:hint="@string/old_pass"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/pass_logo1"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="243dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/lock2" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="278dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="69dp"
        android:layout_marginBottom="158dp"
        android:ems="10"
        android:hint="@string/new_pass"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/pass_logo2"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="164dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/lock2" />

    <Button
        android:id="@+id/resetPasswordConfirm"
        android:layout_width="314dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:background="#0000FF"
        android:text="@string/sign_in"
        android:onClick="resetPassword"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="302dp"
        android:text="TextView"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:onClick="backToMain"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


</RelativeLayout>